bug fixes in the letters

--- a/02_database_basics/02_database_basics.ipynb
+++ b/02_database_basics/02_database_basics.ipynb
@@ -1399,7 +1399,7 @@
     "- 1998: First used for a relational database that omitted usage of SQL\n",
     "- 2009: First used during a conference to advocate non-relational databases\n",
     "\n",
-    "NoSQL is an accidental term with no precise definiƟon"
+    "NoSQL is an accidental term with no precise definition"
    ]
   },
   {
@@ -1466,7 +1466,7 @@
     "- he most simple NoSQL database type\n",
     "    - Works as a simple hash table (mapping)\n",
     "- Key-value pairs\n",
-    "    - Key (id, idenƟfier, primary key)\n",
+    "    - Key (id, identifier, primary key)\n",
     "    - Value: binary object, black box for the database system\n",
     "\n",
     "Query patterns\n",
@@ -1489,9 +1489,9 @@
     "I.e. when values are only accessed via keys\n",
     "\n",
     "When not to use\n",
-    "- Relationships among enƟƟes\n",
+    "- Relationships among entities\n",
     "- Queries requiring access to the content of the value part\n",
-    "- Set operaƟons involving mulƟple key-value pairs\n",
+    "- Set operations involving multiple key-value pairs\n",
     "\n",
     "Representatives\n",
     "- Redis, MemcachedDB, Riak KV, Hazelcast, Ehcache, Amazon, SimpleDB, Berkeley DB, Oracle NoSQL, Infinispan, LevelDB, Ignite, Project Voldemort\n",
@@ -1537,7 +1537,7 @@
     "\n",
     "Query patterns\n",
     "- Create, update or remove a document\n",
-    "- Retrieve documents according to complex query condiƟons\n",
+    "- Retrieve documents according to complex query conditions\n",
     "\n",
     "Observation\n",
     "- Extended key-value stores where the value part is examinable!\n"
@@ -1550,15 +1550,15 @@
     "## Document Stores\n",
     "\n",
     "Suitable use cases\n",
-    "- Event logging, content management systems, blogs, web, analytics, e-commerce applicaƟons, …\n",
+    "- Event logging, content management systems, blogs, web, analytics, e-commerce applications, …\n",
     "    - I.e. *for structured documents with similar schema*\n",
     "\n",
     "When not to use\n",
-    "- *Set operations* involving mulƟple documents\n",
+    "- *Set operations* involving multiple documents\n",
     "- Design of document structure is constantly changing\n",
     "    - I.e. when the required level of granularity would outbalance the advantages of aggregates\n",
     "\n",
-    "RepresentaƟves\n",
+    "Representatives\n",
     "- MongoDB, Couchbase, Amazon DynamoDB, CouchDB, RethinkDB, RavenDB, Terrastore\n",
     "- Multi-model: MarkLogic, OrientDB, OpenLink Virtuoso, ArangoDB\n"
    ]
@@ -1616,7 +1616,7 @@
     "\n",
     "Data model\n",
     "- Column family (table)\n",
-    "    - Table is a collectioon of similar rows (not necessarily idenƟcal)\n",
+    "    - Table is a collectioon of similar rows (not necessarily identical)\n",
     "\n",
     "- Row\n",
     "    - Row is a collectioon of columns\n",
@@ -1646,11 +1646,11 @@
     "    - I.e. for structured flat data with similar schema\n",
     "\n",
     "When not to use\n",
-    "- ACID transacƟons are required\n",
-    "- Complex queries: aggregaƟon (SUM, AVG, …), joining, …\n",
+    "- ACID transactions are required\n",
+    "- Complex queries: aggregation (SUM, AVG, …), joining, …\n",
     "- Early prototypes: i.e. when database design may change\n",
     "\n",
-    "RepresentaƟves\n",
+    "Representatives\n",
     "- Apache Cassandra, Apache HBase, Apache Accumulo, Hypertable, Google Bigtable"
    ]
   },
@@ -1684,14 +1684,14 @@
     "\n",
     "Data model\n",
     "- Property graphs\n",
-    "    - Directed / undirected graphs, i.e. collecƟons of …\n",
-    "        - nodes (verƟces) for real-world enƟƟes, and\n",
+    "    - Directed / undirected graphs, i.e. collections of …\n",
+    "        - nodes (vertices) for real-world entities, and\n",
     "        - relationships (edges) between these nodes\n",
-    "    - Both the nodes and relaƟonships can be associated with addiƟonal properƟes\n",
+    "    - Both the nodes and relationships can be associated with additional properties\n",
     "\n",
     "Types of databases\n",
-    "- Non-transacƟonal = small number of very large graphs\n",
-    "- TransacƟonal = large number of small graphs"
+    "- Non-transactional = small number of very large graphs\n",
+    "- Transactional = large number of small graphs"
    ]
   },
   {
@@ -1700,16 +1700,16 @@
    "source": [
     "## Graph Databases\n",
     "\n",
-    "Query paƩerns\n",
-    "- Create, update or remove a node / relaƟonship in a graph\n",
+    "Query patterns\n",
+    "- Create, update or remove a node / relationship in a graph\n",
     "- Graph algorithms (shortest paths, spanning trees, …)\n",
     "- General graph traversals\n",
     "- Sub-graph queries or super-graph queries\n",
     "- Similarity based queries (approximate matching)\n",
     "\n",
-    "RepresentaƟves\n",
+    "Representatives\n",
     "- Neo4j, Titan, Apache Giraph, InfiniteGraph, FlockDB\n",
-    "- MulƟ-model: OrientDB, OpenLink Virtuoso, ArangoDB"
+    "- Multi-model: OrientDB, OpenLink Virtuoso, ArangoDB"
    ]
   },
   {
@@ -1719,14 +1719,14 @@
     "## Graph Databases\n",
     "\n",
     "Suitable use cases\n",
-    "- Social networks, rouƟng, dispatch, and locaƟon-based, services, recommendaƟon engines, chemical compounds, biological pathways, linguisƟc trees, …\n",
+    "- Social networks, routing, dispatch, and location-based, services, recommendation engines, chemical compounds, biological pathways, linguistic trees, …\n",
     "    - I.e. simply for __graph structures__\n",
     "\n",
     "When not to use\n",
-    "- Extensive batch operaƟons are required\n",
-    "    - MulƟple nodes / relaƟonships are to be affected\n",
+    "- Extensive batch operations are required\n",
+    "    - Multiple nodes / relationships are to be affected\n",
     "- Only too large graphs to be stored\n",
-    "    - Graph distribuƟon is difficult or impossible at all\n"
+    "    - Graph distribution is difficult or impossible at all\n"
    ]
   },
   {
@@ -1763,74 +1763,6 @@
     "- Medium uses Neo4j to build their social graph to enhance content personalization\n",
     "- Cisco uses Neo4j to mine customer support cases to anticipate bugs"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false",
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
