--- a/02_database_basics/02_database_basics.ipynb
+++ b/02_database_basics/02_database_basics.ipynb
@@ -12,40 +12,32 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
-    "## Motivation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": [
+    "## Motivation\n",
+    "\n",
     "<img src=\"https://preview.redd.it/gph4rp6drvo41.jpg?width=640&crop=smart&auto=webp&s=a407a7be1da73ba010f0295a6351ab9d14471b2a\" width=400 />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
-    "## Overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": [
+    "## Overview\n",
+    "\n",
     "1. Pre-SQL  (Robin)\n",
-    "2. SQL databases  (Ali/Emilio)\n",
+    "2. SQL databases  (/Emilio)\n",
     "3. Non-SQL databases  (Ali)\n",
-    "4. Simple graph database introduction  (Robin?)"
+    "4. Porject (Ali)"
    ]
   },
   {
@@ -1324,64 +1316,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Non-SQL"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false",
-    "lines_to_next_cell": 2
-   },
-   "source": [
-    "## Topics\n",
-    "\n",
-    "- Big Data\n",
-    "- NoSQL databases"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Big Data\n",
-    "\n",
-    "<img src=\"https://media.makeameme.org/created/big-data-big-5ad56d.jpg\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What is Big Data\n",
-    "\n",
-    "- high Volume\n",
-    "- high Velocity\n",
-    "- high Variety\n",
-    "- Veracity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Sources\n",
-    "\n",
-    "- Social media and networks\n",
-    "- Scientific instruments\n",
-    "- Mobile devices\n",
-    "- Sensor technology and networks"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1390,11 +1324,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false",
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## NoSQL\n",
+    "# Non-SQL\n",
     "\n",
     "What does NoSQL actually mean?\n",
+    "\n",
     "A bit of history …\n",
     "- 1998: First used for a relational database that omitted usage of SQL\n",
     "- 2009: First used during a conference to advocate non-relational databases\n",
@@ -1404,7 +1344,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## NoSQL: Overview\n",
     "\n",
@@ -1425,7 +1369,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## NoSQL Six key features\n",
     "\n",
@@ -1439,7 +1387,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Types of NoSQL Databases\n",
     "\n",
@@ -1458,7 +1410,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Key-Value Stores\n",
     "\n",
@@ -1480,9 +1436,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Key-Value Stores\n",
+    "### Key-Value Stores\n",
     "\n",
     "Suitable use cases\n",
     "- Session data, user profiles, user preferences, shopping carts, …\n",
@@ -1500,18 +1460,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Key-Value Stores\n",
+    "### Key-Value Stores\n",
     "\n",
     "<img src=\"photos/keyvalue_example.PNG\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Key-Value Stores Use cases\n",
+    "### Key-Value Stores Use cases\n",
     "\n",
     "Key-value data stores are ideal for storing user profiles, blog comments, product recommendations, and session information.\n",
     "\n",
@@ -1523,9 +1491,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "Document Stores\n",
+    "## Document Stores\n",
     "\n",
     "Data model\n",
     "- Documents\n",
@@ -1545,7 +1517,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Document Stores\n",
     "\n",
@@ -1565,7 +1541,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Document Stores\n",
     "\n",
@@ -1598,7 +1578,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Document Stores Use Cases\n",
     "\n",
@@ -1610,7 +1594,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Wide Column Stores\n",
     "\n",
@@ -1630,7 +1618,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Wide Column Stores\n",
     "\n",
@@ -1639,7 +1631,18 @@
     "- Select rows according to a row key or simple conditions\n",
     "\n",
     "Warning\n",
-    "- Wide column stores are not just a special kind of RDBMSs with a variable set of columns!\n",
+    "- Wide column stores are not just a special kind of RDBMSs with a variable set of columns!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Wide Column Stores\n",
     "\n",
     "Suitable use cases\n",
     "- Event logging, content management systems, blogs, …\n",
@@ -1656,7 +1659,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##  Wide Column Stores\n",
     "\n",
@@ -1665,7 +1672,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Wide Column Stores Use Cases\n",
     "\n",
@@ -1678,7 +1689,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Graph Databases\n",
     "\n",
@@ -1696,7 +1711,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Graph Databases\n",
     "\n",
@@ -1714,7 +1733,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Graph Databases\n",
     "\n",
@@ -1731,7 +1754,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Graph Databases\n",
     "\n",
@@ -1742,7 +1769,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Graph Databases\n",
     "\n",
@@ -1763,9 +1794,136 @@
     "- Medium uses Neo4j to build their social graph to enhance content personalization\n",
     "- Cisco uses Neo4j to mine customer support cases to anticipate bugs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Big Data\n",
+    "\n",
+    "<img src=\"https://media.makeameme.org/created/big-data-big-5ad56d.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## What is Big Data\n",
+    "\n",
+    "- high Volume\n",
+    "- high Velocity\n",
+    "- high Variety\n",
+    "- Veracity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Data Sources\n",
+    "\n",
+    "- Social media and networks\n",
+    "- Scientific instruments\n",
+    "- Mobile devices\n",
+    "- Sensor technology and networks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Architecture Design Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Background\n",
+    "\n",
+    "Our client is a well-known manufacturer who builds different types of robotic manipulators. These robots are used by different operators/companies all around the world. \n",
+    "\n",
+    "During the operation, each robot creates a log file which includes timestamps as well as information from different sensors.\n",
+    "\n",
+    "For example, this is a snapshot of the log file\n",
+    "\n",
+    "```\n",
+    ".\n",
+    ".\n",
+    ".\n",
+    "timestamp 10:20:00 X 100 Y 100 Z 100\n",
+    "timestamp 10:20:01 T 5 R 6\n",
+    "timestamp 10:20:02 X 101 Y 99 Z 99\n",
+    "timestamp 10:20:03 X 102 Y 100 Z 99\n",
+    "timestamp 10:20:04 T 7 R 6\n",
+    "timestamp 10:20:05 X 100 Y 100 Z 99\n",
+    ".\n",
+    ".\n",
+    ".\n",
+    "\n",
+    "```\n",
+    "\n",
+    "The logfile can contain differet sensors and sometimes, there are differences between robot sensors and how they are captured."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Main Idea\n",
+    "\n",
+    "Our client wants to create a platform (website) for health-condition-monitoring of the robots. In particular, our client wants to create a platform where different operators of the robotic arms can upload the log files and get insights about the status of their robot and different parts of it. \n",
+    "\n",
+    "<img src=\"photos/cybernetics-1869205_1280.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Task\n",
+    "\n",
+    "Design an architecture for the front-end and the back-end. (on the abstract level)\n",
+    "Consider that each logfile is around 100Mb and is in text format\n",
+    "\n",
+    "- What types of databases are needed?\n",
+    "- In case of sql databases, what columns do you suggest?\n",
+    "- Do we need any nosql db? what type?\n",
+    "\n",
+    "Note: in this case, there are no unique solution. Try to be creative :)"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "jupytext": {
    "formats": "ipynb,py"
   },
