added use cases for nosql

--- a/02_database_basics/02_database_basics.ipynb
+++ b/02_database_basics/02_database_basics.ipynb
@@ -1784,7 +1784,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Graph Databases Use Cases\n",
     "\n",
@@ -1793,6 +1797,22 @@
     "- Walmart uses Neo4j to provide customers personalized, relevant product recommendations and promotions\n",
     "- Medium uses Neo4j to build their social graph to enhance content personalization\n",
     "- Cisco uses Neo4j to mine customer support cases to anticipate bugs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Reasons to use a NoSQL database\n",
+    "\n",
+    "- The pace of development with NoSQL databases can be much faster than with a SQL database.\n",
+    "- The structure of many different forms of data is more easily handled and evolved with a NoSQL database.\n",
+    "- The amount of data in many applications cannot be served affordably by a SQL database.\n",
+    "- The scale of traffic and need for zero downtime cannot be handled by SQL."
    ]
   },
   {
