Day 2 Update: Robin

--- a/00_intro/00_intro.ipynb
+++ b/00_intro/00_intro.ipynb
@@ -11,11 +11,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Why bridging the gap is important\n",
-    "\n",
-    "<img src=\"https://preview.redd.it/zj4noiwbf7g31.jpg?width=640&crop=smart&auto=webp&s=75069427a53b85daa79284f096329d5a70c34719\" width=300>\n",
-    "\n",
+    "## Why bridging the gap is important"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://preview.redd.it/zj4noiwbf7g31.jpg?width=640&crop=smart&auto=webp&s=75069427a53b85daa79284f096329d5a70c34719\" width=300>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"https://external-preview.redd.it/2htFTGm3vrPB41z1b_jHeZ122-lGhMK6aKphMGwShXA.jpg?width=640&crop=smart&auto=webp&s=1b05de40142c59d22e42463b1804e187e550f46a\" width=300>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to bridge the gap"
    ]
   },
   {
@@ -188,20 +205,44 @@
     "   - Design Patterns\n",
     "   - Thinking Functionally\n",
     "   - Module Architecture\n",
-    "   - CLI Interfaces\n",
+    "   - CLI Interfaces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Data Management Fundamentals\n",
     "    - Pre-SQL\n",
     "    - SQL\n",
     "    - NoSQL\n",
-    "    - Graph Databases\n",
+    "    - Graph Databases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3. Continuous Integration Pipeline\n",
     "    - Git\n",
     "    - Unit Tests\n",
     "    - Dockers\n",
-    "    - APIs\n",
+    "    - APIs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "4. Best Practices in Data Science\n",
     "    - Machine Learning \n",
-    "    - Coding\n",
+    "    - Coding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. Processing Data Efficiently\n",
     "    - Tensorflow\n",
     "    - Network Architeictures & Applications\n",
