--- a/01_fundamentals_of_production_code/01_fundamentals_of_production_code.ipynb
+++ b/01_fundamentals_of_production_code/01_fundamentals_of_production_code.ipynb
@@ -938,6 +938,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Original Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -949,6 +956,13 @@
     "upper_slices = tuple([(slice(2, None) if i == ax else (slice(1, -1)) if _contains_axis(axes, i, rank) else slice(None)) for i in dims])\n",
     "lower_slices = tuple([(slice(-2) if i == ax else (slice(1, -1)) if _contains_axis(axes, i, rank) else slice(None)) for i in dims])\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Making sense of original"
    ]
   },
   {
@@ -965,6 +979,13 @@
     "u_slices = tuple([(slice(2, None) if i == ax else slice(1, -1) if _contains_axis(axes, i, rank) else slice(None)) for i in dims])\n",
     "l_slices = tuple([(slice(-2)      if i == ax else slice(1, -1) if _contains_axis(axes, i, rank) else slice(None)) for i in dims])\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Denesting step 1"
    ]
   },
   {
@@ -996,6 +1017,13 @@
     "u_slices = tuple(u_slices)\n",
     "l_slices = tuple(l_slices)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Final denesting"
    ]
   },
   {
@@ -1447,12 +1475,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
+   "outputs": [],
    "source": [
     "Useful equal sized words:\n",
     "\n",
@@ -1484,12 +1514,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
+   "outputs": [],
    "source": [
     "#### PEP8 is not definite"
    ]
@@ -1756,6 +1788,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Intrinsic Decorators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Speaking of decorators, Python provides a ton of useful decorators!\n",
     "\n",
     "fore example: `Least-Recently-Used Cache` to reuse previous computations automatically\n",
@@ -1832,6 +1871,20 @@
     "if not isinstance(x, collections.abc.MutableSequence):\n",
     "    raise ApplicationError('A sequence type is expected')\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### ABC PEP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Abstract Base Clases PEP 3119](https://www.python.org/dev/peps/pep-3119/)"
    ]
   },
   {
@@ -1982,6 +2035,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Inline comments are unnecessary and in fact distracting if they state the obvious. Don't do this:\n",
     "```python\n",
     "x = x + 1                 # Increment x\n",
@@ -2017,7 +2077,7 @@
     }
    },
    "source": [
-    "<img src=\"https://preview.redd.it/jm8b5iwoq6p11.png?width=640&crop=smart&auto=webp&s=f4f484b59333e96555d8076b13dfbc2f8fc2b5b3\" width=400>"
+    "<img src=\"https://preview.redd.it/jm8b5iwoq6p11.png?width=640&crop=smart&auto=webp&s=f4f484b59333e96555d8076b13dfbc2f8fc2b5b3\" width=480>"
    ]
   },
   {
@@ -2031,7 +2091,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://preview.redd.it/a5skfy5y88x11.jpg?width=640&crop=smart&auto=webp&s=edee581af2812ad4f4469d13e79e38d9b2dd3f06\" width=300>"
+    "<img src=\"https://preview.redd.it/a5skfy5y88x11.jpg?width=640&crop=smart&auto=webp&s=edee581af2812ad4f4469d13e79e38d9b2dd3f06\" width=360>"
    ]
   },
   {
@@ -2131,6 +2191,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```python\n",
     "\"\"\"This is the example module.\n",
     "\n",
@@ -2182,16 +2249,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Triple quotes are used even though the string fits on one line. This makes it easy to later expand it.\n",
-    "\n",
-    "> The closing quotes are on the same line as the opening quotes. This looks better for one-liners.\n",
-    "\n",
-    "> There's no blank line either before or after the docstring.\n",
-    "\n",
-    "> The docstring is a phrase ending in a period. It prescribes the function or method's effect as a command (\"Do this\", \"Return that\"), not as a description; e.g. don't write \"Returns the pathname ...\".\n",
-    "\n",
-    "> The one-line docstring should NOT be a \"signature\" reiterating the function/method parameters (which can be obtained by introspection)\n",
-    "\n",
+    "> Triple quotes are used even though the string fits on one line. This makes it easy to later expand it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The closing quotes are on the same line as the opening quotes. This looks better for one-liners."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> There's no blank line either before or after the docstring."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The docstring is a phrase ending in a period. It prescribes the function or method's effect as a command (\"Do this\", \"Return that\"), not as a description; e.g. don't write \"Returns the pathname ...\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The one-line docstring should NOT be a \"signature\" reiterating the function/method parameters (which can be obtained by introspection)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```python\n",
     "\"\"\"Do X and return a list.\"\"\"\n",
     "``` "
@@ -2375,13 +2467,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```python\n",
-    "# in:\n",
     "def very_important_function(template: str, *variables, file: os.PathLike, engine: str, header: bool = True, debug: bool = False):\n",
     "    \"\"\"Applies `variables` to the `template` and writes to `file`.\"\"\"\n",
     "    with open(file, 'w') as f:\n",
     "        ...\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
     "# out:\n",
     "def very_important_function(\n",
     "    template: str,\n",
@@ -2395,6 +2500,13 @@
     "    with open(file, \"w\") as f:\n",
     "        ...\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### In VSCode"
    ]
   },
   {
