--- a/01_fundamentals_of_production_code/jupyter_addons.ipynb
+++ b/01_fundamentals_of_production_code/jupyter_addons.ipynb
@@ -2,45 +2,49 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Useful tools for you workflow"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
-    "#### Using Latex in Power Point"
+    "## Spell Check!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
+   "source": [
+    "https://github.com/ijmbarr/jupyterlab_spellchecker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`jupyter labextension install @ijmbarr/jupyterlab_spellchecker`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Latex in Power Point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "https://www.fast.ai/2019/06/17/latex-ppt/"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Table of Contents\n",
     "\n",
@@ -49,9 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "```bash\n",
     "jupyter labextension install @jupyterlab/toc\n",
@@ -60,9 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Collapsible Headings\n",
     "\n",
@@ -71,9 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "```bash\n",
     "jupyter labextension install @aquirdturtle/collapsible_headings\n",
@@ -82,9 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Go-To-Definition\n",
     "\n",
@@ -97,9 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Notifications for completion of long run of Jupyter Code\n",
     "\n",
@@ -108,9 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "### Install JupyterNotify\n",
     "```bash\n",
@@ -120,18 +112,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "### Enable Notification "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "#### Activate Javascript (only JupyterLab)\n",
     "```python\n",
@@ -144,9 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "#### Enable extension\n",
     "```python\n",
@@ -156,9 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "### Using Notification\n",
     "```python\n",
@@ -169,9 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "#### Giving a message\n",
     "\n",
@@ -189,9 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Bell Notification\n",
     "\n",
@@ -200,18 +180,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Visualizations"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "### Dash Plugin\n",
     "https://github.com/plotly/jupyterlab-dash\n",
@@ -222,9 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "### Bokeh Plugin\n",
     "https://github.com/bokeh/jupyter_bokeh\n",
@@ -237,9 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Enhanced Multiprocessing\n",
     "\n",
@@ -252,25 +224,69 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Helpers\n",
     "\n",
     "https://github.com/krassowski/jupyter-helpers\n",
     "\n",
     "```bash\n",
-    "pip3 install jupyter_helpers\n",
+    "pip install jupyter_helpers\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": []
+   "metadata": {},
+   "source": [
+    "## Jupytext for better git diffs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/mwouts/jupytext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "pip install jupytext\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make presentations out of Notebooks!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/damianavila/RISE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "pip install rise\n",
+    "``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For automatically designating slide_types based on mmarkdown headers, consider: https://github.com/the-rccg/ipynb_slidetype_generator"
+   ]
   }
  ],
  "metadata": {
@@ -289,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
