--- a/04_best_practices/04_best_practices.ipynb
+++ b/04_best_practices/04_best_practices.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Best Practices in Machine Learning and Code Organization"
    ]
@@ -12,7 +10,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Motivation"
@@ -22,7 +20,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -30,7 +32,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Overview"
@@ -39,7 +41,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "Best Pratices in:\n",
@@ -49,9 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Machine Learning"
    ]
@@ -59,7 +59,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": []
   },
@@ -67,16 +67,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Code and Module Organization"
    ]
@@ -84,7 +86,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Motivation"
@@ -93,7 +95,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://preview.redd.it/3kz7f2k1psx41.jpg?width=640&crop=smart&auto=webp&s=0c026807888b4c611089b31c740947bf78b5a3c5\" width=400 />"
@@ -102,7 +104,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://i.redd.it/yl1lu031day41.png\" width=400 />"
@@ -111,7 +113,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Keep Dependencies to a minimum"
@@ -120,7 +122,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://i.redd.it/mapjfjami3y41.jpg\" width=400 />"
@@ -129,7 +131,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Encapsulation is important"
@@ -138,7 +140,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "> Each line of code is a credit you take on and interest is paid in time to maintain the base. Don't default on your code debt."
@@ -147,7 +149,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "<img src=\"https://i.redd.it/tozimpm65gy41.jpg\" widht=400 />"
@@ -157,7 +159,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
