--- a/05_performance/05_performance.ipynb
+++ b/05_performance/05_performance.ipynb
@@ -2,45 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Performance Frameworks"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Motivation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "<img src=\"https://preview.redd.it/bp6g76i3iyx41.jpg?width=640&crop=smart&auto=webp&s=781fd5c86c65d74554a3eba6acd1051befa67630\" width=400 />"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Overview"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "1. Tensorflow / PyTorch  (Ali)\n",
     "2. Network Architectures  (Giovanni)\n",
@@ -51,9 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Tensorflow / PyTorch"
    ]
@@ -62,16 +50,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Network Architectures"
    ]
@@ -80,34 +70,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Slurm"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Managing Jobs"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "Continuous monitoring of Slurm jobs (automatically updates every 2 sec):\n",
     "```bash\n",
@@ -117,18 +105,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Submitting Jobs"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "### General Intro"
    ]
@@ -137,16 +121,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "### Snake"
    ]
@@ -155,32 +141,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Numba"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Just-in-Time Compilation"
    ]
@@ -189,16 +173,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Ahead-of-Time Compilation"
    ]
@@ -207,16 +193,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## CUDA Compilation"
    ]
@@ -225,16 +213,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Performance Comparison"
    ]
@@ -243,16 +233,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Dask"
    ]
@@ -261,16 +253,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Local Parallel Clusters"
    ]
@@ -279,16 +273,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Combining with Numba"
    ]
@@ -297,7 +293,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
